# claude-code-ldi-es

./: .gitignore  CLAUDE.md  devcontainer.json  done.md  init.md  pyproject.toml  validate.md
.claude/hooks/: session-start.sh
ldi/: __init__.py  compare.py  monte_carlo.py  params.py  style.py
notes/: bugs.md  decisions.md  todo.md
paper/tables/: table_mc_summary.tex  table_parameters.tex  table_sensitivity_summary.tex
result/sensitivity/: summary_table.csv
scripts/: generate_paper_figures.py  generate_tables.py  run_all.py  run_baseline_figures.py  run_monte_carlo.py  run_no_limit_test.py  run_sensitivity.py
tests/: test_es_model.py  test_params.py  test_var_model.py
