[project]
name = "ldi-es-constraint"
version = "0.1.0"
description = "ES-Constrained Liability-Driven Investment Model"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
